--- a/app/docker/local.docker-compose.yaml
+++ b/app/docker/local.docker-compose.yaml
@@ -21,7 +21,9 @@ services:
     volumes:
       - ../local_data/postgres:/var/lib/postgresql/data
     environment:
-      - POSTGRES_ROOT_PASSWORD=root
+      - POSTGRES_USER=amfa_user
+      - POSTGRES_PASSWORD=amfa_password
+      - POSTGRES_DB=amfa_db
 
   amfa-redis:
     image: redis:6.2
