Middleware to add requestID

--- a/app/src/.env.example
+++ b/app/src/.env.example
@@ -8,3 +8,9 @@ AMFA_DB_SSL_MODE=disable
 AMFA_DB_MAX_CONNECTIONS=10
 AMFA_DB_IDLE_TIMEOUT=30000
 AMFA_DB_CONN_MAX_LIFETIME=30000
+
+AMFA_CACHE_HOST=amfa-cache
+AMFA_CACHE_PORT=6379
+AMFA_CACHE_DB=1
+
+AMFA_JWT_SECRET=your_secret
