Add env variable

--- a/app/src/.env.example
+++ b/app/src/.env.example
@@ -14,3 +14,7 @@ AMFA_CACHE_PORT=6379
 AMFA_CACHE_DB=1
 
 AMFA_JWT_SECRET=your_secret
+AMFA_DISAVOW_URL=http://localhost:8082/v1/hacked/disavow
+
+AMFA_PORT=8082
+AMFA_ENV=dev
