--- a/app/docker/local.docker-compose.yaml
+++ b/app/docker/local.docker-compose.yaml
@@ -15,6 +15,21 @@ services:
       - ../src/.env
     networks:
       - amfa-network
+  
+  amfa-test:
+    build:
+      context: ../
+      dockerfile: docker/local.Dockerfile
+    container_name: amfa-test
+    ports:
+      - "8083:8083"
+    volumes:
+      - ../:/go
+      - ../local_data/test:/test
+    env_file:
+      - ../src/.test.env
+    networks:
+      - amfa-network
 
   amfa-db:
     image: postgres:13
@@ -22,6 +37,7 @@ services:
       - "5432:5432"
     volumes:
       - ../local_data/postgres:/var/lib/postgresql/data
+      - ../src/db/init/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       - POSTGRES_USER=amfa_user
       - POSTGRES_PASSWORD=amfa_password
