Add mocks and config for TOTP

--- a/app/src/.test.env
+++ b/app/src/.test.env
@@ -18,3 +18,6 @@ AMFA_DISAVOW_URL=http://localhost:8083/v1/hacked/disavow
 
 AMFA_PORT=8083
 AMFA_ENV=dev
+
+AMFA_TOTP_ISSUER=Adaptive MFA
+AMFA_TOTP_SECRET_SIZE=12
