--- a/app/src/.env.example
+++ b/app/src/.env.example
@@ -18,3 +18,6 @@ AMFA_DISAVOW_URL=http://localhost:8082/v1/hacked/disavow
 
 AMFA_PORT=8082
 AMFA_ENV=dev
+
+AMFA_TOTP_ISSUER=Adaptive MFA
+AMFA_TOTP_SECRET_SIZE=12
