--- a/app/src/.test.env
+++ b/app/src/.test.env
@@ -21,3 +21,8 @@ AMFA_ENV=dev
 
 AMFA_TOTP_ISSUER=Adaptive MFA
 AMFA_TOTP_SECRET_SIZE=12
+
+AMFA_LOGIN_VERIFICATION_ATTEMPTS_THRESHOLD=20
+AMFA_LOGIN_VERIFICATION_ATTEMPTS_LOCK_DURATION=86400 #seconds
+AMFA_LOGIN_ATTEMPTS_THRESHOLD=5
+AMFA_LOGIN_ATTEMPTS_LOCK_DURATION=86400 #seconds
